--- a/Challenger/Base.lproj/Main.storyboard
+++ b/Challenger/Base.lproj/Main.storyboard
@@ -259,6 +259,31 @@
             </objects>
             <point key="canvasLocation" x="-83" y="356"/>
         </scene>
+        <!--CHALLENGERS-->
+        <scene sceneID="ALx-ET-TJD">
+            <objects>
+                <viewController id="OHL-s4-Jnv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zOv-4f-05X"/>
+                        <viewControllerLayoutGuide type="bottom" id="IxJ-nJ-f3x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NgP-OI-G4w">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D2X-MU-i9c">
+                                <rect key="frame" x="272" y="177" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="CHALLENGERS" id="fAw-pf-hZE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PI9-Pf-ZkS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="735" y="-992"/>
+        </scene>
         <!--FRIENDS-->
         <scene sceneID="bNA-tz-qYe">
             <objects>
@@ -286,7 +311,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9iU-RK-CGw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="735" y="1031"/>
+            <point key="canvasLocation" x="737" y="-309"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tjO-dT-3WO">
@@ -307,7 +332,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Px-U3-v3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-85" y="1031"/>
+            <point key="canvasLocation" x="-83" y="-309"/>
         </scene>
         <!--PROFILE-->
         <scene sceneID="nEa-ME-9Un">
@@ -342,7 +367,7 @@
         <scene sceneID="SpS-fD-GZ7">
             <objects>
                 <navigationController id="iaY-ct-zfv" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="contacts" id="DqY-aB-59J"/>
+                    <tabBarItem key="tabBarItem" image="tab_profile_0" id="DqY-aB-59J"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="gqQ-8l-9C7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -359,40 +384,11 @@
             </objects>
             <point key="canvasLocation" x="-85" y="1711"/>
         </scene>
-        <!--CHALLENGERS-->
-        <scene sceneID="Kes-zV-99p">
-            <objects>
-                <tableViewController id="dq1-qB-7Hl" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lJr-8o-nP1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="yGb-ky-nEu">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yGb-ky-nEu" id="Hvv-xc-yTu">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="dq1-qB-7Hl" id="ef1-3j-9jd"/>
-                            <outlet property="delegate" destination="dq1-qB-7Hl" id="Qdd-Ap-d69"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="CHALLENGERS" id="QlO-Yv-X46"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Mao-3a-E3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="736" y="-981"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="OWP-Hx-kFS">
             <objects>
                 <navigationController id="1c9-Yj-0Uk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="history" id="0WR-Gc-RQP"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_news_0" id="0WR-Gc-RQP"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2mQ-2s-0he">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -407,7 +403,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dlN-XE-Jw4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-84" y="-304"/>
+            <point key="canvasLocation" x="-85" y="1031"/>
         </scene>
         <!--NOTIFICATIONS-->
         <scene sceneID="vFv-dD-k8t">
@@ -474,13 +470,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QES-b2-kgf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="736" y="-304"/>
+            <point key="canvasLocation" x="735" y="1031"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="t8i-KT-i7v">
             <objects>
                 <navigationController id="Pyb-ry-74b" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="more" id="u4o-y2-oBV"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_home_0" id="u4o-y2-oBV"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2jw-jy-JfQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -490,7 +486,7 @@
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="dq1-qB-7Hl" kind="relationship" relationship="rootViewController" id="JLX-wd-Zn2"/>
+                        <segue destination="OHL-s4-Jnv" kind="relationship" relationship="rootViewController" id="R2A-fF-VVE"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gXZ-Hs-GB9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -602,10 +598,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBackground" translatesAutoresizingMaskIntoConstraints="NO" id="5A0-p8-Jys">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" red="0.28235294119999998" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tagline_reverse" translatesAutoresizingMaskIntoConstraints="NO" id="oKA-wB-kQW">
                                 <rect key="frame" x="200" y="68" width="200" height="52"/>
                                 <color key="backgroundColor" red="0.28235294119999998" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -614,7 +606,7 @@
                                     <constraint firstAttribute="width" constant="200" id="qTH-4P-DuR"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="iP9-Tc-R0e">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon" translatesAutoresizingMaskIntoConstraints="NO" id="iP9-Tc-R0e">
                                 <rect key="frame" x="228" y="152" width="144" height="144"/>
                                 <color key="backgroundColor" red="0.28235294119999998" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -683,6 +675,10 @@
                                     <action selector="skipButtonClicked:" destination="Gd8-Z3-hnb" eventType="touchUpInside" id="PPc-Yu-M8y"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginBackground" translatesAutoresizingMaskIntoConstraints="NO" id="5A0-p8-Jys">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.28235294119999998" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -1002,6 +998,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="AppIcon" width="40" height="40"/>
         <image name="IMG_0164.JPG" width="218" height="218"/>
         <image name="Screen Shot 2015-12-15 at 8.04.28 PM.png" width="80" height="78"/>
         <image name="camera-button" width="72" height="73"/>
@@ -1010,8 +1007,10 @@
         <image name="default_profile" width="100" height="100"/>
         <image name="flash-off" width="24" height="25"/>
         <image name="loginBackground" width="250" height="444"/>
-        <image name="logo" width="250" height="444"/>
         <image name="mail" width="250" height="444"/>
+        <image name="tab_home_0" width="28" height="25"/>
+        <image name="tab_news_0" width="25" height="25"/>
+        <image name="tab_profile_0" width="20" height="25"/>
         <image name="tagline_reverse" width="250" height="444"/>
     </resources>
 </document>
