--- a/Smyt/Base.lproj/Category.storyboard
+++ b/Smyt/Base.lproj/Category.storyboard
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ArI-fm-h5e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ArI-fm-h5e">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="KittenSwash.ttf">
+            <string>KittenSwash</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="tjO-dT-3WO">
@@ -61,29 +66,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SIk-WS-wNq">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SIk-WS-wNq">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
                                                     <color key="backgroundColor" white="0.53582913870000004" alpha="1" colorSpace="calibratedWhite"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sl1-0S-fAL">
-                                                    <rect key="frame" x="243" y="65" width="115" height="30"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sl1-0S-fAL">
+                                                    <rect key="frame" x="213" y="70" width="174" height="61"/>
+                                                    <fontDescription key="fontDescription" name="KittenSwash" family="Kitten Swash" pointSize="40"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smytTitle-icon" translatesAutoresizingMaskIntoConstraints="NO" id="QJC-3O-hxq">
-                                                    <rect key="frame" x="279" y="103" width="44" height="19"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="19" id="0oA-WY-YoG"/>
-                                                        <constraint firstAttribute="width" constant="44" id="RV7-e5-f8H"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="QJC-3O-hxq" firstAttribute="centerX" secondItem="sl1-0S-fAL" secondAttribute="centerX" id="JB1-fh-Ipe"/>
                                                 <constraint firstItem="SIk-WS-wNq" firstAttribute="top" secondItem="BJw-VD-xPy" secondAttribute="top" id="KtP-3I-3ch"/>
-                                                <constraint firstItem="QJC-3O-hxq" firstAttribute="top" secondItem="sl1-0S-fAL" secondAttribute="bottom" constant="8" id="VLe-xQ-7KY"/>
-                                                <constraint firstItem="sl1-0S-fAL" firstAttribute="centerY" secondItem="BJw-VD-xPy" secondAttribute="centerY" constant="-20" id="Wop-q4-LA0"/>
+                                                <constraint firstItem="sl1-0S-fAL" firstAttribute="centerY" secondItem="BJw-VD-xPy" secondAttribute="centerY" id="Wop-q4-LA0"/>
                                                 <constraint firstAttribute="bottom" secondItem="SIk-WS-wNq" secondAttribute="bottom" id="eIa-A8-bxw"/>
                                                 <constraint firstAttribute="trailing" secondItem="SIk-WS-wNq" secondAttribute="trailing" id="jwR-7j-WZe"/>
                                                 <constraint firstItem="SIk-WS-wNq" firstAttribute="leading" secondItem="BJw-VD-xPy" secondAttribute="leading" id="uNV-hr-DRI"/>
@@ -394,7 +390,6 @@
         <image name="icon_share" width="22" height="20"/>
         <image name="like-button" width="25" height="24"/>
         <image name="nav_backArrow" width="22" height="22"/>
-        <image name="smytTitle-icon" width="545" height="233"/>
         <image name="tab_search_0" width="25" height="25"/>
     </resources>
 </document>
