--- a/Smyt/Base.lproj/VideoRecording.storyboard
+++ b/Smyt/Base.lproj/VideoRecording.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oiP-1j-g3F">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oiP-1j-g3F">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -181,8 +181,11 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uto-o9-VvH">
-                                                        <rect key="frame" x="530" y="6" width="54" height="32"/>
-                                                        <color key="backgroundColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <rect key="frame" x="534" y="8" width="50" height="28"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="28" id="Q1J-fW-MDS"/>
+                                                            <constraint firstAttribute="width" constant="50" id="cNu-r0-9dE"/>
+                                                        </constraints>
                                                         <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                                         <state key="normal" image="smytWhite-nav-icon">
                                                             <color key="titleColor" red="0.89157196969999997" green="0.89157196969999997" blue="0.89157196969999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -431,7 +434,7 @@
         <image name="camera-flip" width="23" height="24"/>
         <image name="flash-off" width="24" height="25"/>
         <image name="nav_backArrow" width="22" height="22"/>
-        <image name="smytTitle-icon" width="545" height="233"/>
-        <image name="smytWhite-nav-icon" width="44" height="20"/>
+        <image name="smytTitle-icon" width="301" height="133"/>
+        <image name="smytWhite-nav-icon" width="301" height="133"/>
     </resources>
 </document>
