--- a/Smyt/Landing.storyboard
+++ b/Smyt/Landing.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gd8-Z3-hnb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Gd8-Z3-hnb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -22,10 +22,10 @@
                                 <color key="backgroundColor" red="0.28235294119999998" green="0.6588235294" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="smytTitle-icon" translatesAutoresizingMaskIntoConstraints="NO" id="oKA-wB-kQW">
-                                <rect key="frame" x="200" y="40" width="200" height="52"/>
+                                <rect key="frame" x="235" y="70" width="130" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="52" id="Fh2-jF-rV9"/>
-                                    <constraint firstAttribute="width" constant="200" id="qTH-4P-DuR"/>
+                                    <constraint firstAttribute="height" constant="50" id="Fh2-jF-rV9"/>
+                                    <constraint firstAttribute="width" constant="130" id="qTH-4P-DuR"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="an7-X7-TUq">
@@ -92,36 +92,21 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="XGp-rL-KHS">
                                 <rect key="frame" x="282" y="281" width="37" height="37"/>
                             </activityIndicatorView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="iP9-Tc-R0e">
-                                <rect key="frame" x="228" y="104" width="144" height="144"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="144" id="1dJ-5j-Avy"/>
-                                    <constraint firstAttribute="width" constant="144" id="9Ot-Q5-bY7"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.clipsToBounds" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="20"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="gqW-qY-3jI" secondAttribute="centerX" id="6s4-Nq-F0R"/>
-                            <constraint firstItem="iP9-Tc-R0e" firstAttribute="top" secondItem="oKA-wB-kQW" secondAttribute="bottom" constant="12" id="7J7-NY-eP8"/>
                             <constraint firstItem="an7-X7-TUq" firstAttribute="top" secondItem="gqW-qY-3jI" secondAttribute="bottom" constant="4" id="7rE-8r-USu"/>
                             <constraint firstItem="an7-X7-TUq" firstAttribute="height" secondItem="gqW-qY-3jI" secondAttribute="height" id="BXz-TM-2SO"/>
                             <constraint firstItem="gqW-qY-3jI" firstAttribute="height" secondItem="VnD-Pl-E11" secondAttribute="height" id="C9c-NN-Fi6"/>
-                            <constraint firstItem="VnD-Pl-E11" firstAttribute="top" secondItem="iP9-Tc-R0e" secondAttribute="bottom" constant="20" id="Gp7-Bf-UwT"/>
                             <constraint firstItem="MeZ-Fh-eIu" firstAttribute="top" secondItem="an7-X7-TUq" secondAttribute="bottom" constant="2" id="Mm1-Lb-jFi"/>
                             <constraint firstItem="gqW-qY-3jI" firstAttribute="top" secondItem="VnD-Pl-E11" secondAttribute="bottom" constant="12" id="OAu-8g-mX4"/>
-                            <constraint firstAttribute="centerX" secondItem="iP9-Tc-R0e" secondAttribute="centerX" id="RG5-jf-uZL"/>
                             <constraint firstItem="aMN-GK-PdM" firstAttribute="centerX" secondItem="xms-jt-gro" secondAttribute="centerX" id="RMg-eQ-d2n"/>
                             <constraint firstItem="an7-X7-TUq" firstAttribute="width" secondItem="gqW-qY-3jI" secondAttribute="width" id="SxU-2O-Xyc"/>
                             <constraint firstItem="5A0-p8-Jys" firstAttribute="width" secondItem="xms-jt-gro" secondAttribute="width" id="YqT-U5-a03"/>
                             <constraint firstItem="F8r-hq-weQ" firstAttribute="top" secondItem="5A0-p8-Jys" secondAttribute="bottom" id="ZzR-0L-YKR"/>
                             <constraint firstAttribute="centerX" secondItem="oKA-wB-kQW" secondAttribute="centerX" id="cHc-V0-f5h"/>
+                            <constraint firstItem="VnD-Pl-E11" firstAttribute="top" secondItem="oKA-wB-kQW" secondAttribute="bottom" constant="148" id="cLh-yC-s5b"/>
                             <constraint firstItem="XGp-rL-KHS" firstAttribute="centerY" secondItem="xms-jt-gro" secondAttribute="centerY" id="cnb-mk-wQh"/>
                             <constraint firstItem="5A0-p8-Jys" firstAttribute="top" secondItem="xms-jt-gro" secondAttribute="top" id="gyK-Wh-S6y"/>
                             <constraint firstAttribute="centerX" secondItem="MeZ-Fh-eIu" secondAttribute="centerX" id="h4a-AG-L1z"/>
@@ -130,7 +115,7 @@
                             <constraint firstItem="F8r-hq-weQ" firstAttribute="top" secondItem="aMN-GK-PdM" secondAttribute="bottom" constant="20" id="lzc-dt-ft2"/>
                             <constraint firstItem="gqW-qY-3jI" firstAttribute="width" secondItem="VnD-Pl-E11" secondAttribute="width" id="mLF-hL-NC7"/>
                             <constraint firstAttribute="centerX" secondItem="VnD-Pl-E11" secondAttribute="centerX" id="nX4-TG-4eE"/>
-                            <constraint firstItem="oKA-wB-kQW" firstAttribute="top" secondItem="VCq-1B-pHx" secondAttribute="bottom" constant="20" id="stB-mP-k9O"/>
+                            <constraint firstItem="oKA-wB-kQW" firstAttribute="top" secondItem="VCq-1B-pHx" secondAttribute="bottom" constant="50" id="stB-mP-k9O"/>
                             <constraint firstItem="XGp-rL-KHS" firstAttribute="centerX" secondItem="xms-jt-gro" secondAttribute="centerX" id="uIh-mq-EMq"/>
                         </constraints>
                     </view>
@@ -468,8 +453,7 @@
     <resources>
         <image name="default_profile" width="100" height="100"/>
         <image name="loginBackground" width="250" height="444"/>
-        <image name="logo" width="150" height="152"/>
         <image name="mail" width="16" height="16"/>
-        <image name="smytTitle-icon" width="545" height="233"/>
+        <image name="smytTitle-icon" width="301" height="133"/>
     </resources>
 </document>
