--- a/Smyt/Base.lproj/Notification.storyboard
+++ b/Smyt/Base.lproj/Notification.storyboard
@@ -222,7 +222,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h5J-kl-sZZ">
                                                     <rect key="frame" x="0.0" y="668" width="600" height="120"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g1B-m4-duo">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g1B-m4-duo">
                                                             <rect key="frame" x="86" y="4" width="100" height="22"/>
                                                             <rect key="contentStretch" x="0.050000000000000003" y="0.0" width="1" height="1"/>
                                                             <constraints>
@@ -236,7 +236,7 @@
                                                                 <action selector="commentButtonClicked:" destination="CTN-8x-ZBy" eventType="touchUpInside" id="JT1-Bz-dMg"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Gb-mU-DtA">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Gb-mU-DtA">
                                                             <rect key="frame" x="8" y="4" width="70" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="Dam-f7-0fx"/>
@@ -250,14 +250,14 @@
                                                                 <action selector="likeButtonClicked:" destination="CTN-8x-ZBy" eventType="touchUpInside" id="Sez-R4-JPz"/>
                                                             </connections>
                                                         </button>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon-message" translatesAutoresizingMaskIntoConstraints="NO" id="O9o-38-jZt">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-message" translatesAutoresizingMaskIntoConstraints="NO" id="O9o-38-jZt">
                                                             <rect key="frame" x="8" y="34" width="22" height="19"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="22" id="Ah2-bm-LK3"/>
                                                                 <constraint firstAttribute="height" constant="19" id="Wuv-CT-8F5"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVZ-yF-c4g">
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVZ-yF-c4g">
                                                             <rect key="frame" x="38" y="34" width="554" height="78"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -265,7 +265,7 @@
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                             <dataDetectorType key="dataDetectorTypes" link="YES" address="YES" calendarEvent="YES"/>
                                                         </textView>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsS-1r-ay8">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WsS-1r-ay8">
                                                             <rect key="frame" x="194" y="4" width="70" height="22"/>
                                                             <rect key="contentStretch" x="0.050000000000000003" y="0.0" width="1" height="1"/>
                                                             <constraints>
@@ -279,7 +279,7 @@
                                                                 <action selector="shareButtonClicked:" destination="CTN-8x-ZBy" eventType="touchUpInside" id="FEP-Lf-oP3"/>
                                                             </connections>
                                                         </button>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8d-8x-4YJ">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8d-8x-4YJ">
                                                             <rect key="frame" x="552" y="4" width="40" height="22"/>
                                                             <rect key="contentStretch" x="0.050000000000000003" y="0.0" width="1" height="1"/>
                                                             <constraints>
@@ -301,6 +301,7 @@
                                                         <constraint firstItem="w8d-8x-4YJ" firstAttribute="height" secondItem="WsS-1r-ay8" secondAttribute="height" id="Dwe-gm-FYe"/>
                                                         <constraint firstItem="g1B-m4-duo" firstAttribute="top" secondItem="6Gb-mU-DtA" secondAttribute="top" id="Ho8-jW-Iff"/>
                                                         <constraint firstItem="WsS-1r-ay8" firstAttribute="leading" secondItem="g1B-m4-duo" secondAttribute="trailing" constant="8" id="JHf-VQ-Jh4"/>
+                                                        <constraint firstItem="O9o-38-jZt" firstAttribute="leading" secondItem="6Gb-mU-DtA" secondAttribute="leading" id="Ohw-kT-Wyr"/>
                                                         <constraint firstItem="w8d-8x-4YJ" firstAttribute="top" secondItem="WsS-1r-ay8" secondAttribute="top" id="Ug6-TW-cZg"/>
                                                         <constraint firstAttribute="trailing" secondItem="xVZ-yF-c4g" secondAttribute="trailing" constant="8" id="aUi-cL-7Hs"/>
                                                         <constraint firstItem="6Gb-mU-DtA" firstAttribute="leading" secondItem="h5J-kl-sZZ" secondAttribute="leadingMargin" id="eak-gj-olU"/>
@@ -313,6 +314,7 @@
                                                         </constraint>
                                                         <constraint firstItem="6Gb-mU-DtA" firstAttribute="top" secondItem="h5J-kl-sZZ" secondAttribute="top" constant="4" id="tKi-O6-OFG"/>
                                                         <constraint firstItem="O9o-38-jZt" firstAttribute="leading" secondItem="h5J-kl-sZZ" secondAttribute="leading" constant="8" id="u8D-r9-qhU"/>
+                                                        <constraint firstItem="O9o-38-jZt" firstAttribute="top" secondItem="6Gb-mU-DtA" secondAttribute="bottom" constant="8" id="uBA-I1-v3w"/>
                                                         <constraint firstItem="WsS-1r-ay8" firstAttribute="height" secondItem="g1B-m4-duo" secondAttribute="height" id="yQs-qz-Z9D"/>
                                                     </constraints>
                                                 </view>
