--- a/Smyt/Profile.storyboard
+++ b/Smyt/Profile.storyboard
@@ -726,7 +726,7 @@
                                 <action selector="cancelButtonClicked:" destination="5R3-wB-fAr" id="fLR-29-LFh"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="g1g-EY-Cag">
+                        <barButtonItem key="rightBarButtonItem" title="Return" id="g1g-EY-Cag">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="doneButtonClicked:" destination="5R3-wB-fAr" id="krN-ae-GXr"/>
